@@ -48,6 +48,7 @@ const guint	AUTOMATIC_CHECK		=	1;
 const guint	MODE_GTK			=	0;
 const guint	MODE_GNOME			=	1;
 const guint MODE_NOGUI			=   2;
+const guint MODE_SYSTEMTRAY		=   3;
 
 const guint	PROTOCOL_NONE		=	0;
 const guint	PROTOCOL_FILE		=	1;
